2009-03-05  Jeremy Moskovich  <jeremy@chromium.org>

Reviewed by Simon Fraser.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=24215

        Gears expects an object tag with display:none to instantiate the plugin,
        so we add a workaround to make this work and fix Gears on WebKit trunk.

        * html/HTMLObjectElement.cpp:
        (WebCore::HTMLObjectElement::rendererIsNeeded):



Canonical link: https://commits.webkit.org/33543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41473 268f45cc-cd09-0410-ab3c-d52691b4dbfc